testData/imports/optimize/importWithMultiplePackages.go
<error descr="package expected, got 'import'">import</error> pack

func main() {
  pack.Test()
}